--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,6 +19,6 @@ install:
 build_script:
   - mkdir build
   - cd build
-  - cmake .. -G "NMake Makefiles"
+  - cmake .. -G "NMake Makefiles" -DCMAKE_CXX_FLAGS="/EHsc /W4 /wd4459"
   - nmake
   - ctest --output-on-failure
